export string and prevent crash interface not implemented

--- a/app/src/main/res/layout/activity_credicard_view.xml
+++ b/app/src/main/res/layout/activity_credicard_view.xml
@@ -25,7 +25,7 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:labelOwner="@string/label_owner"
-       app:labelDateExp="valid thru">
+       app:labelDateExp="@string/valid_thru">
 
    </movile.com.creditcardguide.view.CreditCardView>
 
