--- a/app/src/main/res/layout/activity_credit_card_fragment.xml
+++ b/app/src/main/res/layout/activity_credit_card_fragment.xml
@@ -28,7 +28,6 @@
        app:labelCardDateExp="valid thru"
        app:labelButtonPay="Confirm to pay"
        app:buttonPayBackground="@color/colorAccent"
-       app:buttonPayTextColor="@color/white"
-       app:saveCard="false"/>
+       app:buttonPayTextColor="@color/white"/>
 
 </LinearLayout>
